--- a/scss/partials/_imageoverlay.scss
+++ b/scss/partials/_imageoverlay.scss
@@ -47,16 +47,14 @@
 
         img {
             border-radius: 25px;
-            width: 30vh;
-            margin: 2em 0 0 7em;
+            padding: 1em;
         }
 
         p {
-            margin: 3em;
             text-align: center;
+            padding: 1em;
         }
 
-    
     }
 
 }
