--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -90,7 +90,7 @@
         input[type="text"], textarea {
             border: 3px solid $color-accent-light;
             border-radius: 25px;
-            width:30vw;
+            width: 50vw;
             padding: 1em;
             color: $color-body-primary-dark;
         }
@@ -117,7 +117,13 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
+}
 
+@media (min-width: $breakpoint-small) {
+    .site-footer form input[type="text"], .site-footer form textarea {
+        width: 20vw;
+        display: block;
+    }
 }
 
 /* HERO SECTION */
@@ -178,9 +184,7 @@ section {
     }
 
     .featured-product-cards  {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        display: block;
         list-style: none;
     
         img {
@@ -192,6 +196,14 @@ section {
         img:hover {
             transform: scale(1.2);
         }
+    }
+}
+
+@media (min-width: $breakpoint-small) {
+    .featured .featured-product-cards {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
     }
 }
 
